; ModuleID = '/home/carl/AnghaBench/vlc/modules/demux/playlist/extr_itml.c_parse_tracks_dict.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/demux/playlist/extr_itml.c_parse_tracks_dict.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i64 }

@.str = private unnamed_addr constant [5 x i8] c"dict\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"key\00", align 1
@.str.2 = private unnamed_addr constant [30 x i8] c"added %zu tracks successfully\00", align 1
@COMPLEX_CONTENT = common dso_local global i32 0, align 4
@SIMPLE_CONTENT = common dso_local global i32 0, align 4
@UNKNOWN_CONTENT = common dso_local global i32 0, align 4
@parse_track_dict = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_7__*, i32*, i8*, i32*, i8*, i8*)* @parse_tracks_dict to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_tracks_dict(%struct.TYPE_7__* %0, i32* %1, i8* %2, i32* %3, i8* %4, i8* %5) #0 {
  %7 = alloca %struct.TYPE_7__*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca [3 x i8], align 1
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %7, align 8
  store i32* %1, i32** %8, align 8
  store i8* %2, i8** %9, align 8
  store i32* %3, i32** %10, align 8
  store i8* %4, i8** %11, align 8
  store i8* %5, i8** %12, align 8
  %14 = load i8*, i8** %9, align 8
  %15 = call i32 @VLC_UNUSED(i8* %14)
  %16 = load i8*, i8** %11, align 8
  %17 = call i32 @VLC_UNUSED(i8* %16)
  %18 = load i8*, i8** %12, align 8
  %19 = call i32 @VLC_UNUSED(i8* %18)
  %20 = getelementptr inbounds [3 x i8], [3 x i8]* %13, i64 0, i64 0
  store i8 ptrtoint ([5 x i8]* @.str to i8), i8* %20, align 1
  %21 = getelementptr inbounds i8, i8* %20, i64 1
  store i8 ptrtoint ([4 x i8]* @.str.1 to i8), i8* %21, align 1
  %22 = getelementptr inbounds i8, i8* %21, i64 1
  store i8 0, i8* %22, align 1
  %23 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %24 = load i32*, i32** %8, align 8
  %25 = load i32*, i32** %10, align 8
  %26 = getelementptr inbounds [3 x i8], [3 x i8]* %13, i64 0, i64 0
  %27 = call i32 @parse_dict(%struct.TYPE_7__* %23, i32* %24, i32* null, i32* %25, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8* %26)
  %28 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %29 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %30 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %29, i32 0, i32 0
  %31 = load i64, i64* %30, align 8
  %32 = inttoptr i64 %31 to i64*
  %33 = load i64, i64* %32, align 8
  %34 = call i32 @msg_Info(%struct.TYPE_7__* %28, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.2, i64 0, i64 0), i64 %33)
  ret i32 1
}

declare dso_local i32 @VLC_UNUSED(i8*) #1

declare dso_local i32 @parse_dict(%struct.TYPE_7__*, i32*, i32*, i32*, i8*, i8*) #1

declare dso_local i32 @msg_Info(%struct.TYPE_7__*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
